@@ -1821,7 +1821,7 @@ INSERT INTO droits SET id='/saisie/socle_verrouillage.php', administrateur='V', 
 INSERT INTO droits SET id='/saisie/socle_verif.php', administrateur='V', professeur='V', cpe='V', scolarite='V', eleve='F', responsable='F', secours='F', autre='F', description='Socle: Vérification du remplissage', statut='';
 INSERT INTO droits SET id='/saisie/socle_import.php', administrateur='V', professeur='F', cpe='V', scolarite='V', eleve='F', responsable='F', secours='F', autre='F', description='Socle: Import', statut='';
 INSERT INTO droits SET id='/matieres/associations_matieres_enseignements.php', administrateur='V', professeur='F', cpe='F', scolarite='F', eleve='F', responsable='F', secours='F', autre='F', description='Associations matières/enseignements', statut='';
-INSERT INTO droits SET id='/gestion/saisie_modalites_accompagnement.php', administrateur='V', professeur='F', cpe='F', scolarite='F', eleve='F', responsable='F', secours='F', autre='F', description='Saisie des modalités d accompagnement', statut='';
+INSERT INTO droits SET id='/gestion/saisie_modalites_accompagnement.php', administrateur='V', professeur='F', cpe='F', scolarite='V', eleve='F', responsable='F', secours='F', autre='F', description='Saisie des modalités d accompagnement', statut='';
 INSERT INTO modalites_accompagnement SET code='PAP', libelle='Plan d\’accompagnement personnalisé', avec_commentaire='n';
 INSERT INTO modalites_accompagnement SET code='PAI', libelle='Projet d\’accueil individualisé', avec_commentaire='n';
 INSERT INTO modalites_accompagnement SET code='PPRE', libelle='Programme personnalisé de réussite éducative', avec_commentaire='y';
